--- a/TODO-App/package.json
+++ b/TODO-App/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "mongoose": "^8.7.0",
     "zod": "^3.23.8"
   }
